gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/Claude_Investigation__c.object-meta.xml
<CustomObject>
    <label>Claude Investigation</label>
    <pluralLabel>Claude Investigations</pluralLabel>
    <description>A question a user asked Claude about something that happened in Salesforce or a connected system, the answer Claude found, and (optionally) the engineering issue it was reported as.</description>
    <nameField>
        <label>Investigation #</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>