gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer (Markdown)</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>