gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Answer_Rich__c.field-meta.xml
<CustomField>
    <fullName>Answer_Rich__c</fullName>
    <label>Answer</label>
    <type>Html</type>
    <length>131072</length>
</CustomField>