gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD__c</fullName>
    <label>Claude Cost (USD)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>