gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Fix_PR_URL__c.field-meta.xml
<CustomField>
    <fullName>Fix_PR_URL__c</fullName>
    <label>Fix Pull Request</label>
    <type>Url</type>
</CustomField>