gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Fix_Status__c.field-meta.xml
<CustomField>
    <fullName>Fix_Status__c</fullName>
    <label>Fix Status</label>
    <type>Text</type>
    <length>40</length>
</CustomField>