gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <label>GitHub Issue #</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>