gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Issue_URL__c.field-meta.xml
<CustomField>
    <fullName>Issue_URL__c</fullName>
    <label>GitHub Issue</label>
    <type>Url</type>
</CustomField>