gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Needs_Fix__c.field-meta.xml
<CustomField>
    <fullName>Needs_Fix__c</fullName>
    <label>Claude Thinks a Code Fix Is Needed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>