gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>