gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Context Record Id</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>