gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Record_Object__c</fullName>
    <label>Context Object</label>
    <type>Text</type>
    <length>80</length>
</CustomField>