gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Engineering Report (Markdown)</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>The detailed technical report Claude wrote: root cause, evidence, affected repos and a proposed fix. This is what goes into the GitHub issue.</description>
</CustomField>