gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Reporter_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Comment__c</fullName>
    <label>Reporter Comment</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>What the user added when they reported the answer as an issue.</description>
</CustomField>