gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Queued</fullName><default>true</default><label>Queued</label></value>
            <value><fullName>Running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>Answered</fullName><default>false</default><label>Answered</label></value>
            <value><fullName>Reported</fullName><default>false</default><label>Reported to Engineering</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>