gero-trace/salesforce/force-app/main/default/objects/Claude_Investigation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Status__c</columns>
    <columns>Confidence__c</columns>
    <columns>Issue_URL__c</columns>
    <columns>Fix_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>